--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ streamlit==1.8.1  # https://streamlit.io/
 # Pendulum
 pendulum==2.1.2  # https://pendulum.eustace.io/docs/
 
+# Plotly
+plotly==5.7.0  # https://plotly.com/python-api-reference/
+
 pip==22.0.4
