--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,6 @@
 [theme]
-primaryColor = "#d33682"
+primaryColor = "#C84B31"
 backgroundColor = "#00172B"
-secondaryBackgroundColor = "#000"
-textColor = "#C6CDD4"
-#font = "sans-serif"
+secondaryBackgroundColor = "#346751"
+textColor = "#ECDBBA"
 font = "monospace"
